force-app/main/default/objects/VN_MetaParticipante__c/fields/V_Vigente__c.field-meta.xml
<CustomField>
    <fullName>V_Vigente__c</fullName>
    <description>Exibe se o registro de metas do participante por ano fiscal é o vigente ou não.</description>
    <formula>V_AnoFiscal__r.V_Vigente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Exibe se o registro de metas do participante por ano fiscal é o vigente ou não.</inlineHelpText>
    <label>Vigente</label>
    <type>Checkbox</type>
</CustomField>