force-app/main/default/objects/VN_MetaParticipante__c/fields/V_ZzPotencialCarteira__c.field-meta.xml
<CustomField>
    <fullName>V_ZzPotencialCarteira__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Valor do Tamanho da Carteira do participante. O atual critério é o mesmo valor do total de metas do ano fiscal do participante.</description>
    <inlineHelpText>Valor do Tamanho da Carteira do participante. O atual critério é o mesmo valor do total de metas do ano fiscal do participante.</inlineHelpText>
    <label>Zz_Tamanho da Carteira</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>