force-app/main/default/objects/VN_MetaParticipante__c/fields/Zz_V_ScoreTamanhoCarteira__c.field-meta.xml
<CustomField>
    <fullName>Zz_V_ScoreTamanhoCarteira__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zz_Score Tamanho da Carteira</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>