force-app/main/default/objects/VN_MetaParticipante__c/validationRules/VN_ValidaFormatoAnoFiscal.validationRule-meta.xml
<ValidationRule>
    <fullName>VN_ValidaFormatoAnoFiscal</fullName>
    <active>true</active>
    <description>Valida formato do campo Ano Fiscal (Name).</description>
    <errorConditionFormula>OR(
LEN( Name ) &lt;&gt; 4,
LEFT(Name ,2) &lt;&gt; &quot;FY&quot;,
ISNUMBER(LEFT(Name , 2)),
NOT(ISNUMBER(RIGHT(Name, 2))))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Formato inválido do &quot;Ano Fiscal&quot;. Exemplo correto: FY19</errorMessage>
</ValidationRule>